# iio

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENCE  README  TODO  fes  fesEXR  iio.c  iio.h  iio_test.c  iio_test_named.c
contrib/: libraw_interface.cpp
contrib/cmake/: CMakeLists.txt
contrib/liio/: fes  iio_ud.lua  image.lua  image_test2.c  image_test2.lua  imgffi.lua  liio.c
contrib/lua/: README  bidima.lua  iio_ud.lua  image_test2.lua
contrib/mini/: iio.c
contrib/octave/: Makefile  example_iio.m  iio_read.mex  iio_write.c
contrib/old/: fes  iio_test_named.c
contrib/piio_packaged/: README.md  setup.py
contrib/piio_packaged/piio/: CMakeLists.txt  Makefile  freemem.c  iio.c  libraw_interface.cpp  piio.py  setup.py  test_piio.py
contrib/pyftr/: sp.py
contrib/python/: README
contrib/python/iio-0.0.3/: PKG-INFO  iio.py  setup.py
contrib/python/iio-0.0.3/iio/: iio.c
contrib/python/iio-0.0.3/iio.egg-info/: SOURCES.txt  top_level.txt
contrib/python/iio-0.0.3/test/: test.py
contrib/python/piio_packaged/piio/: iio.c  iio.h
contrib/python/pypi/: PKG-INFO  README  iio.py  setup.py
doc/: raw.txt
interfaces/: libraw_interface.cpp
interfaces/cmake/: CMakeLists.txt  FindLibRaw.cmake
interfaces/lua/: fes  iio_ffi.lua  image.lua  image_test.lua  image_test3.lua  imgiio.lua  liio.c  tensor.lua
interfaces/mini/: iio.h
interfaces/octave/: Makefile
interfaces/python/piio_packaged/: README.md  setup.py
interfaces/python/piio_packaged/piio/: iio.h  piio.py  setup.py  (+2 more)
interfaces/python/pypi/: README  iio.py  setup.py
interfaces/tkftr/: sp.py
misc/: fesmac
octave/: Makefile  build.sh  clean.sh  example_iio.m  iio_read.c  iio_write.c  iio_write.mex
piio_packaged/: setup.py
piio_packaged/piio/: __init__.py  piio.py
samples/: abruta.tiff  barbara.heif  binary.tiff  ccimage  ccimage.alt  ccimage.cro  cfimage  cimage  cimage.alt  depth.exr  fimage  fimage.alt  object.exr  tiled.tif  trees.pfm  tricky.txt  uniform.asc  uniform.csv  uniform.txt  velocity.exr
tests/: Makefile.all  Makefile.default  Makefile.hdf5  Makefile.nolibs  floatrw.c  in.npy  old_travis_build.yml  rules.mk  run_all.sh
